Added Register in Login Page, Fixed References in pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,6 +32,8 @@
             <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
             <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
             <input type="submit" value="Login" id="login-form-submit">
+            Don't Have An Account?
+            <a href="views/register.ejs" class="text-warning">Sign Up</a>
         </form>
         <br></br>
         <div>
