--- a/views/register.ejs
+++ b/views/register.ejs
@@ -71,7 +71,7 @@
                 
                <p class="text-center text-white small">
                 Already have an account? 
-                <a href="/login" class="text-warning">Sign in</a>
+                <a href="#index" class="text-warning">Sign in</a>
               </p>
               </form>
              
