Planning Backend Functionalities

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,3 +42,6 @@
     </main>
 </body>
 </html>
+
+<!--The Information User Inputs Saves into Database (POST Request) on Submit
+    Redirect to Signup Page -->
