--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
         <div id="login-error-msg-holder">
             <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
         </div>
-        <form id="login-form" onsubmit="#profile">
+        <form action="#profile" method="post">
             <select id="userType">
                 <option value="userType">Select User Type:</option>
                 <option value="student">Student</option>
