App File Changes, Neccessary Router Files Added and Commented steps to take for Login View

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
     </div>
     <h1>Welcome to All In One Study Application</h1>
     <img src="images/logo.jfif" height="100">
+    <!--Need to make code to save inputted values to save to database and also Signup Button redirect to Register Page and Login in Page to Profile Page-->
     <main id="main-holder">
         <h1 id="login-header">Login</h1>
         <div id="login-error-msg-holder">
