--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,31 +18,9 @@
     </div>
     <h1>Welcome to All In One Study Application</h1>
     <img src="images/logo.jfif" height="100">
-    <!--Need to make code to save inputted values to save to database and also Signup Button redirect to Register Page and Login in Page to Profile Page-->
     <main id="main-holder">
-        <h1 id="login-header">Login</h1>
-        <div id="login-error-msg-holder">
-            <p id="login-error-msg">Invalid username <span id="error-msg-second-line">and/or password</span></p>
-        </div>
-        <form action="#profile" method="post">
-            <select id="userType">
-                <option value="userType">Select User Type:</option>
-                <option value="student">Student</option>
-                <option value="teacher">Teacher</option>
-            </select>
-            <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
-            <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
-            <input type="submit" value="Login" id="login-form-submit">
-            Don't Have An Account?
-            <a href="views/register.ejs" class="text-warning">Sign Up</a>
-        </form>
-        <br></br>
-        <div>
-            This Application will help Students and Teachers to stay organized in their studies and teachers
-        </div>
+        <form action="/index" method="post">
+            <label for="userType">User Type</label>
     </main>
 </body>
 </html>
-
-<!--The Information User Inputs Saves into Database (POST Request) on Submit
-    Redirect to Signup Page -->
