--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,21 @@
     <img src="images/logo.jfif" height="100">
     <main id="main-holder">
         <form action="/index" method="post">
-            <label for="userType">User Type</label>
+            <label for="userType">User Type: </label>
+            <select id="userType" name="userType">
+                <option value="student">Student</option>
+                <option value="teacher">Teacher</option>
+            </select>
+
+            <label for="userName">User Name: </label>
+            <input type="text" id="userName" name="userName">
+
+            <label for="password">Password: </label>
+            <input type="password" id="password" name="password">
+        </form>
+        <ul>
+            <li><a href="/register">Sign Up, if you havent created an account</a></li>
+        </ul>
     </main>
 </body>
 </html>
