--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<!--Stiil to work on:
+- Working with the database and getting the backend functuonality to login into the application-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
