--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,6 +49,7 @@
             <a href="#Grader">Grader</a>
             <a href="#Calendar">Calendar</a>
             <a href="#Tutorial">Tutorial</a>
+            <a href="/logout">Logout</a>
         </div>
 
         <h1>Welcome to the All in One Study Application</h1>
