backend changes for user login
backend changes for user login

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,9 +51,11 @@
             <a href="#Tutorial">Tutorial</a>
             <a href="/logout">Logout</a>
         </div>
-
+         <h1><%= title %></h1>
+            
+        
         <h1>Welcome to the All in One Study Application</h1>
-        <form id="loginForm" action="/login" method="post">
+        <form id="loginForm" action="/user/login" method="post">
             <div class="form-group">
                 <p>User Type:</p>
                 <select name="userType" id="userType">
