--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
             <a href="#Tutorial">Tutorial</a>
             <a href="/logout">Logout</a>
         </div>
-         <h1><%= title %></h1>
+         <h1><%= messages %></h1>
             
         
         <h1>Welcome to the All in One Study Application</h1>
@@ -70,7 +70,7 @@
                 <button type="submit" id="submit" value="Submit">Submit</button>
                 <br />
                 <p>If you do not have an account:</p>
-                <a href="/register">Sign Up</a>
+                <a href="/user/register" >Sign Up</a>
             </div>
         </form>
     </div>
