--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,7 +56,7 @@
 
         <h1>Welcome to the All in One Study Application</h1>
         <p>This application will help students and teachers stay organized during their studies</p>
-        <form id="loginForm" action="/login" method="post">
+        <form id="loginForm" action="/user/login" method="post">
             <div class="form-group">
                 <p>User Type:</p>
                 <select name="userType" id="userType">
@@ -72,7 +72,7 @@
                 <button type="submit" id="submit" value="Submit">Submit</button>
                 <br />
                 <p>If you do not have an account:</p>
-                <a href="/register">Sign Up</a>
+                <a href="/user/register">Sign Up</a>
             </div>
         </form>
     </div>
