--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,18 +42,11 @@
     }
     </style>
 </head>
-<body>
+<body style="margin: 0; font-family: Arial, Helvetica, sans-serif;">
     <div>
-        <div class="topnav">
-            <a href="/">Home</a>
-            <a href="#Profile">Profile</a>
-            <a href="#Checklist">Checklist</a>
-            <a href="#Grader">Grader</a>
-            <a href="#Calendar">Calendar</a>
-            <a href="#Tutorial">Tutorial</a>
-            <a href="/">Logout</a>
+        <div>
+            <%- include('partials/navbar') %>
         </div>
-
         <h1>Welcome to the All in One Study Application</h1>
         <p>This application will help students and teachers stay organized during their studies</p>
         <form id="loginForm" action="/user/login" method="post">
