--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,43 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <style>
-    body {
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    p {
-        text-align: center;
-    }
-    .topnav {
-        overflow: hidden;
-        background-color: #333;
-    }
-    
-    .topnav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-    }
-    
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-    h1 {
-        text-align: center;
-    }
-    form{
-        text-align: center;
-    }
-    .form-group {
-        border: 1px solid;
-    }
+        .topnav {
+    overflow: hidden;
+    background-color: #333;
+}
+
+.topnav a {
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
     </style>
 </head>
-<body style="margin: 0; font-family: Arial, Helvetica, sans-serif;">
+<body style="margin: 0; font-family: Arial, Helvetica, sans-serif; text-align: center">
     <div>
         <div>
             <%- include('partials/navbar') %>
