--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
         </div>
         <h1>Welcome to the All in One Study Application</h1>
         <p>This application will help students and teachers stay organized during their studies</p>
-        <form id="loginForm" action="/user/login" method="post">
+        <form id="loginForm" action="/user/profile" method="post">
             <div class="form-group">
                 <p>User Type:</p>
                 <select name="userType" id="userType">
