--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,36 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
+    <title>Home and Login Page</title>
     <style>
-    .topnav {
-        overflow: hidden;
-        background-color: #333;
-    }
-    
-    .topnav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-    }
-    
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
+        .main-content {
+            text-align: center;
+        }
     </style>
 </head>
-<body style="margin: 0; font-family: Arial, Helvetica, sans-serif; text-align: center">
-    <div>
-        <div>
-            <%- include('partials/navbar') %>
-        </div>
-        <h1>Welcome to the All in One Study Application</h1>
-        <p>This application will help students and teachers stay organized during their studies</p>
-        <form id="loginForm" action="/user/profile" method="post">
+<div>
+    <%- include('partials/navbar') %>
+</div>
+<div class="main-content">
+    <h1>Welcome to the All in One Study Application</h1>
+<p>This application will help students and teachers stay organized during their studies</p>
+<form id="loginForm" action="/user/profile" method="post">
             <div class="form-group">
                 <p>User Type:</p>
                 <select name="userType" id="userType">
@@ -52,6 +36,6 @@
                 <a href="/user/register">Sign Up</a>
             </div>
         </form>
-    </div>
-</body>
+</div>
+
 </html>
