--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,23 +1,4 @@
-<style>
-    .topnav {
-        overflow: hidden;
-        background-color: #333;
-    }
-    
-    .topnav a {
-        float: left;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-        font-size: 17px;
-    }
-    
-    .topnav a:hover {
-        background-color: #ddd;
-        color: black;
-    }
-</style>
+<link rel="stylesheet" href="/public/assets/navbar.css" />
 <div class="topnav">
     <a href="/">Home</a>
     <a href="#Profile">Profile</a>
