Adding the Logo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
 <div class="main-content">
     <h1>Welcome to the All in One Study Application</h1>
     <p>This application will help students and teachers stay organized during their studies</p>
+    <img src="/public/images/logo.jfif" />
+    <p></p>
     <form id="loginForm" action="/user/profile" method="post">
         <p>User Name:</p>
         <input type="text" id="username" name="username" placeholder="Enter your username">
