Register Validation Changes

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
                 </div>
               <% } %>
   
-              <form method="POST" id="registerForm" action="/user/register" novalidate>
+              <form method="POST" id="registerForm" action="/user/register">
                 <p class="hint-text">Create your own account. It's free and only takes a minute.</p>
                 <p class="lead"><i class="fas fa-user-shield"></i> Personal Information</p>
                 
@@ -32,12 +32,12 @@
                 <div class="row">
                   <div class="col-md-12">
                     <input type="email" class="form-control" id="email" name="email"
-                    value="" placeholder="Email Address" required>
+                    placeholder="Email Address" required>
                   </div>
 
                   <div class="col-md-12">
                     <input type="phone" class="form-control" id="phone" name="phone"
-                    value="" placeholder="Phone Number" required>
+                    placeholder="Phone Number" required>
                   </div>
                 </div>
   
@@ -46,7 +46,7 @@
                 <div class="row">              
                   <div class="col-md-12">
                     <input type="text" class="form-control" id="username" name="username"  
-                    value="" placeholder="username" required>
+                    placeholder="username" required>
                   </div>
                 </div>
   
