Updated Register page to include header navigation bar, footer and center alignment.

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,11 @@
-<div class="row">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Home and Login Page</title>
+<link rel="stylesheet" href="/public/assets/styles.css"/>
+<div>
+    <%- include('partials/navbar') %>
+</div>
+<div class="main-content">
     <div class="offset-md-3 col-md-6 col-sm-12">
           <div class="login" id="contentArea">
               <h2>Register</h2>
@@ -79,3 +86,6 @@
         
     </div>
   </div>
+  <div>
+    <%- include('partials/footer') %>
+</div>
