--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,8 +1,55 @@
-<h1>Profile Page</h1>
-<div id="messageArea" class="alert alert-danger">
-      <%= username %>
-      <%= email %>
-      <%= userType %>
-      <%= phone %>
-      <%= isTutor %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <style>
+    body {
+        margin: 0;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    p {
+        text-align: center;
+    }
+    
+    h1 {
+        text-align: center;
+    }
+    form{
+        text-align: center;
+    }
+    .form-group {
+        border: 1px solid;
+    }
+    </style>
+</head>
+<body>
+<div class="row">
+      <div class="offset-md-3 col-md-6 col-sm-12">
+            <div class="profile" id="contentArea">
+                <h2>Profile</h2>
+    
+                <div id="profilePage">
+                  <p>Welcome to the profile page.</p>
+                  <p>User Name : <%= username %></p>
+                  <p>Email : <%= email %></p>
+                  <p>UserType : <%= userType %></p>
+                  <p>Phone number : <%= phone %></p>
+                  <p>Tutor? : <%= isTutor %></p>
+                  
+                  
+                  <% if(isTutor === "no") { %>
+                        <p><button>I want to be a tutor.</button></p>
+                    <% } %>
+                  </div>
+
+                  <button>Update my profile</button>
+               
+            </div>
+          
+      </div>
 </div>
+</body>
+</html>
