Latest Checklist Changes

--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checklist</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">   
+    <link rel="stylesheet" href="/public/assets/checklist.css" type="text/css" media="screen" charset="utf-8">   
     
   </head>
   <div>
@@ -20,15 +20,10 @@
      
       
       <h3>On going</h3>
-      <ul id="incomplete-tasks">
-        <li class="editMode"><input type="checkbox"><label>Database assignment</label><input type="text" value="Database assignment"><button class="edit">Edit</button><button class="delete">Delete</button></li>
-        
-      </ul>
+      
       
       <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li><input type="checkbox" checked><label>Complete Programming 2 assignment</label><input type="text"><button class="edit">Edit</button><button class="delete">Delete</button></li>
-      </ul>
+      
     </div>
 
 
