--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -2,7 +2,7 @@
 <div class="topnav">
     <a href="/">Home</a>
     <a href="#Profile">Profile</a>
-    <a href="#Checklist">Checklist</a>
+    <a href="/checklist/get">Checklist</a>
     <a href="#Grader">Grader</a>
     <a href="#Calendar">Calendar</a>
     <a href="#Tutorial">Tutorial</a>
