coding of back-end

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,52 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login Page</title>
-    <style>
-    body {
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-    p {
-        text-align: center;
-    }
-    
-    h1 {
-        text-align: center;
-    }
-    form{
-        text-align: center;
-    }
-    .form-group {
-        border: 1px solid;
-    }
-    </style>
+    <link rel="stylesheet" href="/public/assets/profile.css"/>
+    <script src="../public/JavaScript/profile.js"></script>
+    <title>Profile Page</title>
 </head>
 <body>
-<div class="row">
-      <div class="offset-md-3 col-md-6 col-sm-12">
-            <div class="profile" id="contentArea">
-                <h2>Profile</h2>
-    
-                <div id="profilePage">
-                  <p>Welcome to the profile page.</p>
-                  <p>User Name : <%= username %></p>
-                  <p>Email : <%= email %></p>
-                  <p>UserType : <%= userType %></p>
-                  <p>Phone number : <%= phone %></p>
-                  <p>Tutor? : <%= isTutor %></p>
-                  
-                  
-                  <% if(isTutor === "no") { %>
-                        <p><button>I want to be a tutor.</button></p>
-                    <% } %>
-                  </div>
+<div>
+      <%- include('partials/navbar') %>
+</div>
+      <div class="row">
+            <div class="offset-md-3 col-md-6 col-sm-12">
+                  <div class="profile" id="main-content">
+                  <h2>Profile</h2>
+      
+                        <div id="profilePage">
+                              <p>Welcome to the profile page.</p>
+                              <p>User Name : <%= username %></p>
+                              <p>Email : <%= email %></p>
+                              <p>UserType : <%= userType %></p>
+                              <p>Phone number : <%= phone %></p>
+                              <p>Tutor? : <%= isTutor %></p>
+                        </div>
 
-                  <button>Update my profile</button>
-               
+                        <button onClick="updateProfile()" id="btnUpdateProfile">Update my profile</button>
+                        <p id="profileForm"></p>
+                  </div>
+            
             </div>
-          
       </div>
+<div>
+      <%- include('partials/footer') %>
 </div>
 </body>
 </html>
