--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,7 +19,7 @@
       
                         <div id="profilePage">
                               <p>Welcome to the profile page.</p>
-                              <p>User Name : <%= username %></p>
+                              <p id="username-para">User Name : <%= username %></p>
                               <p>Email : <%= email %></p>
                               <p>UserType : <%= userType %></p>
                               <p>Phone number : <%= phone %></p>
