--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/public/assets/navbar.css" />
 <div class="topnav">
     <a href="/">Home</a>
-    <a href="#Profile">Profile</a>
+    <a href="/user/profile">Profile</a>
     <a href="/checklist/get">Checklist</a>
     <a href="#Grader">Grader</a>
     <a href="#Calendar">Calendar</a>
