--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,5 +6,5 @@
     <a href="#Grader">Grader</a>
     <a href="#Calendar">Calendar</a>
     <a href="#Tutorial">Tutorial</a>
-    <a href="/">Logout</a>
+    <a href="/user/logout">Logout</a>
 </div>
