Made design changes

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -22,19 +22,12 @@
                 <p class="lead"><i class="fas fa-user-shield"></i> Personal Information</p>
                 
                 <div class="row text-center mt-2">
-                    <div class="col-lg-4 col-4">Type of User ?</div>
-                    <div class="col-lg-1 col-1">Student</div>
-                    <div class="col-lg-2 col-2"><input type="radio" name="usertype" value="student" id="student" required></div>
-                    <div class="col-lg-1 col-1">Teacher</div>
-                    <div class="col-lg-2 col-2"><input type="radio" name="usertype" value="teacher" id="teacher" required></div>
+                    <div class="col-lg-4 col-4">Type of User?  : Student <input type="radio" name="usertype" value="student" id="student" required> Teacher <input type="radio" name="usertype" value="teacher" id="teacher" required></div>
                   </div>
                 
+              
                   <div class="row text-center mt-2">
-                    <div class="col-lg-4 col-4">Is Tutor</div>
-                    <div class="col-lg-1 col-1">Yes</div>
-                    <div class="col-lg-2 col-2"><input type="radio" name="isTutor" value="yes" id="yes" required></div>
-                    <div class="col-lg-1 col-1">No</div>
-                    <div class="col-lg-2 col-2"><input type="radio" name="isTutor" value="no" id="no" required></div>
+                    <div class="col-lg-4 col-4">Is Tutor?  Yes <input type="radio" name="isTutor" value="yes" id="yes" required> No <input type="radio" name="isTutor" value="no" id="no" required> </div>
                   </div>
 
                 <div class="row">
