--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -2,7 +2,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checklist</title>
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/public/assets/checklist.css" type="text/css" media="screen" charset="utf-8">   
+    <link rel="stylesheet" href="/public/assets/styles.css" type="text/css" media="screen" charset="utf-8">   
     
   </head>
   <div>
@@ -11,7 +11,7 @@
 
 
 <body>
-  <div class="container">
+  <div class="main-content">
       <h1>
           Checklist
       </h1>
