--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,7 +3,8 @@
     <a href="/">Home</a>
     <a href="/user/profile">Profile</a>
     <a href="/checklist/get">Checklist</a>
-    <a href="#Grader">Grader</a>
+    <a href="#StudentGrader">Student Grader</a>
+    <a href="#TeacherGrader">Teacher Grader</a>
     <a href="#Calendar">Calendar</a>
     <a href="#Tutorial">Tutorial</a>
     <a href="/user/logout">Logout</a>
