--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,8 +3,8 @@
     <a href="/">Home</a>
     <a href="/user/profile">Profile</a>
     <a href="/checklist/get">Checklist</a>
-    <a href="#Grader">Student Grader</a>
-    <a href="/grader/get">Teacher Grader</a>
+    <a href="/grader/getStudent">Student Grader</a>
+    <a href="/grader/getTeacher">Teacher Grader</a>
     <a href="#Calendar">Calendar</a>
     <a href="#Tutorial">Tutorial</a>
     <a href="/user/logout">Logout</a>
