--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
     <a href="/user/profile">Profile</a>
     <a href="/checklist/get">Checklist</a>
     <a href="#Grader">Grader</a>
-    <a href="/calender/get">Calendar</a>
+    <a href="/calender/">Calendar</a>
     <a href="#Tutorial">Tutorial</a>
     <a href="/user/logout">Logout</a>
 </div>
