tutor backend changes
tutor backend changes

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,6 +5,6 @@
     <a href="/checklist/get">Checklist</a>
     <a href="#Grader">Grader</a>
     <a href="/calender/">Calendar</a>
-    <a href="#Tutorial">Tutorial</a>
+    <a href="/tutorial/get">Tutorial</a>
     <a href="/user/logout">Logout</a>
 </div>
