--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -13,6 +13,15 @@ img {
     width: 200;
 }
 
+#g-signin2 {
+  text-align: center;
+}
+
+#graderForm {
+  text-align: center;
+}
+
+
 /***********************************************************************/
 
 
@@ -1341,7 +1350,7 @@ img {
     box-shadow: none;
     border: 1px solid #e6e6e6;
   }
-  input[type="text"] {
+  input[type="text"], input[type="number"] {
     box-shadow: none;
     border: 1px solid #f0f0f0;
     font-size: 16px !important;
