--- a/views/studentGrader.ejs
+++ b/views/studentGrader.ejs
@@ -5,8 +5,25 @@
     <%- include('partials/navbar') %>
 </div>
 <div>
-    <h1>My Grades: <%= grades %></h1>
-    <!--Here will do a for loop to go through the grades for the user and display Course, Grade and Mark-->
+    <h1>My Grades:</h1>
+    <% if(grades!=null) { %>
+        <table>
+            <tr>
+                <th>Course Name</th>
+                <th>Grade</th>
+                <th>Mark</th>
+            </tr>
+            <% grades.forEach(function(grade){ %>
+            
+            <tr>
+                <td><%= grade.courseName%></td>
+                <td><%= grade.grade%></td>
+                <td><%= grade.marks%></td>
+            </tr>
+        <% }) %>
+        </table>
+    <% } %>
+    
 </div>
 <div>
     <%- include('partials/footer') %>
