--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -26,6 +26,16 @@ h1 {
   text-align: center;
 }
 
+table, th, td {
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid black;
+}
+
+p {
+  text-align: center;
+}
+
 
 /***********************************************************************/
 
