added tutee view page

--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -26,6 +26,10 @@ h1 {
   text-align: center;
 }
 
+#tutors{
+  width:150px;   
+ }
+
 
 /***********************************************************************/
 
