--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
 
     <a href="/grader/getGrades">Grader</a>
     <a href="/calender/">Calendar</a>
-    <a href="/tutorial/get">Tutorial</a> 
+    <a href="/tutorial/getTutor">Tutorial</a> 
 
     <a href="/user/logout">Logout</a>
 </div>
