--- a/views/checklist.ejs
+++ b/views/checklist.ejs
@@ -9,7 +9,6 @@
     <%- include('partials/navbar') %>
 </div>
 
-
 <body>
   <div class="main-content">
       <h1>
@@ -18,19 +17,18 @@
     <p>
       <label for="new-task">Add Item</label><input id="new-task" type="text"><button>Add</button>
     </p>
-   
     
     <h3>On going</h3>
-    <ul id="incomplete-tasks">
-      <li class="editMode"></li>
-      
-    </ul>
+    <ul style="list-style: none;"id="incomplete-tasks" ul>
+      <li class="editMode" li>
+     </ul>
     
     <h3>Completed</h3>
-    <ul id="completed-tasks">
+    <ul id="completed-tasks"; style="list-style: none;" ul>
       <li></li>
     </ul>
   </div>
+  
 
 <script>
 
