--- a/views/tutorView.ejs
+++ b/views/tutorView.ejs
@@ -20,7 +20,7 @@
                         <div id="tutorPage">
                               <p>Welcome to the tutor page.</p>
                               <p id="meetingList-para">User Name : <%= meetingList %></p>
-                              <p id="allStudents-para">Password : <%= allStudents %></p>
+                              <p id="allStudents-para">Password : <%= allstudents %></p>
                         </div>
 
                         <button onClick="updateProfile()" id="btnUpdateProfile">Update my profile</button>
