--- a/views/tutorView.ejs
+++ b/views/tutorView.ejs
@@ -19,12 +19,22 @@
       
                         <div id="tutorPage">
                               <p>Welcome to the tutor page.</p>
-                              <p id="meetingList-para">User Name : <%= meetingList %></p>
-                              <p id="allStudents-para">Password : <%= allstudents %></p>
+                              <% meetingList.forEach(function(meeting){ %>
+                                    <table border="1">
+                                          <% meeting.Meeting.forEach(function(meetingItem){ %>
+                                          <tr><p id="{{meeting.username}}"><%= meeting.username %></tr>
+                                          <tr><p id="{{meetingItem.tutorname}}"><%= meetingItem.tutorname %></tr>
+                                          <tr><p id="{{meetingItem.course}}"><%= meetingItem.course %></tr>
+                                          <tr><p id="{{meetingItem.name}}"><%= meetingItem.name %></tr>
+                                          <tr><p id="{{meetingItem.desciption}}"><%= meetingItem.desciption %></tr>
+                                          <tr><p id="{{meetingItem.time}}"><%= meetingItem.time %></tr><br><br><br>
+                                          <% }) %>
+                                    </table>
+                              <% }) %>
+                              
+                              
+                                </table>
                         </div>
-
-                        <button onClick="updateProfile()" id="btnUpdateProfile">Update my profile</button>
-                        <p id="profileForm"></p>
                   </div>
             
             </div>
